--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
     <a href="#features">Features</a>
     <a href="#fiction">Fiction</a>
     <a href="#art">Art</a>
-    <a href="#about">About</a>
+    <a href="about.html">About</a>
     <a href="#submit">Submit</a>
   </nav>
 
