--- a/about.html
+++ b/about.html
@@ -58,13 +58,58 @@
       color: #ccc;
       margin-bottom: 1.2rem;
     }
+
+    /* Footer Styles */
     footer {
       background: #0f0f1c;
-      padding: 2rem;
+      padding: 2rem 1rem;
+      color: #ccc;
+    }
+    .footer-container {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-between;
+      max-width: 1200px;
+      margin: auto;
+    }
+    .footer-column {
+      flex: 1;
+      min-width: 250px;
+      margin: 1rem;
+    }
+    .footer-logo {
+      width: 60px;
+      margin-bottom: 1rem;
+    }
+    .newsletter-input {
+      padding: 0.5rem;
+      border: none;
+      border-radius: 4px;
+      width: 100%;
+      max-width: 250px;
+      margin-bottom: 0.5rem;
+    }
+    .newsletter-button {
+      padding: 0.5rem 1rem;
+      background-color: #0df6e3;
+      border: none;
+      border-radius: 4px;
+      color: #0f0f1c;
+      cursor: pointer;
+      font-weight: bold;
+    }
+    .newsletter-button:hover {
+      background-color: #0bc2b7;
+    }
+    .footer-bottom {
       text-align: center;
-      font-size: 0.9rem;
+      margin-top: 2rem;
+      font-size: 0.8rem;
       color: #666;
-      margin-top: 4rem;
+    }
+    .footer-column a:hover {
+      text-decoration: underline;
+      color: #0df6e3;
     }
   </style>
 </head>
@@ -73,6 +118,7 @@
     <img src="Flame logo-1.png.png" alt="Burnline logo">
     BURNLINE
   </header>
+
   <nav>
     <a href="index.html">Home</a>
     <a href="features.html">Features</a>
@@ -125,4 +171,3 @@
   </footer>
 </body>
 </html>
-
