--- a/about.html
+++ b/about.html
@@ -124,7 +124,7 @@
     <a href="features.html">Features</a>
     <a href="fiction.html">Fiction</a>
     <a href="art.html">Art</a>
-    <a href="about.html">About</a>
+    <a href="https://bowliopia.github.io/burnline/about.html">About</a>
     <a href="submit.html">Submit</a>
   </nav>
 
