--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 
   <nav>
     <a href="#features">Features</a>
-    <a href="#fiction">Fiction</a>
+    <a href="https://bowliopia.github.io/burnline/fiction.html">Fiction</a>
     <a href="#art">Art</a>
     <a href="https://bowliopia.github.io/burnline/about.html">About</a>
     <a href="#submit">Submit</a>
