--- a/fiction.html
+++ b/fiction.html
@@ -172,24 +172,24 @@
   <section class="content">
     <h1>Original Fiction</h1>
     <div class="story-grid" id="storyGrid">
-      <!-- Initial 3 Stories -->
+      <!-- Placeholder Stories -->
       <div class="story-card">
-        <img src="NM Art.png" alt="Story Art">
-        <h3>Redemption Song</h3>
-        <p>The ancient myth of Pandora’s box reimagined in a haunting, post-apocalyptic future.</p>
-        <small>By Quan Barry — July 16, 2025</small>
+        <img src="https://via.placeholder.com/400x250/0df6e3/0f0f1c?text=Story+One" alt="Story Art">
+        <h3>The Parallax Scar</h3>
+        <p>A memory broker wakes to find one of his own memories missing—and selling fast.</p>
+        <small>By Cal Venn — July 2025</small>
       </div>
       <div class="story-card">
-        <img src="AL Cover.png" alt="Story Art">
-        <h3>Rapport</h3>
-        <p>Perihelion and its crew embark on a dangerous mission at a corporate-controlled station.</p>
-        <small>By Martha Wells — July 10, 2025</small>
+        <img src="https://via.placeholder.com/400x250/0df6e3/0f0f1c?text=Story+Two" alt="Story Art">
+        <h3>Glass Static</h3>
+        <p>What happens when the last analogue signal bleeds back into the mesh?</p>
+        <small>By El Harker — July 2025</small>
       </div>
       <div class="story-card">
-        <img src="Test Cover 1.png" alt="Story Art">
-        <h3>The Sack of Burley Cottage</h3>
-        <p>A futuristic caper about a thief who plans a job that may destroy his entire past.</p>
-        <small>By Rich Larson — June 25, 2025</small>
+        <img src="https://via.placeholder.com/400x250/0df6e3/0f0f1c?text=Story+Three" alt="Story Art">
+        <h3>Vanta Drip</h3>
+        <p>Reality bends when a thief injects a prototype neural dye stolen from the spire labs.</p>
+        <small>By Xue Ren — July 2025</small>
       </div>
     </div>
     <div class="load-more-container">
@@ -228,19 +228,19 @@
   <script>
     const moreStories = [
       {
-        img: "Test Cover 2.png",
+        img: "https://via.placeholder.com/400x250/0df6e3/0f0f1c?text=Pulsewave",
         title: "Pulsewave",
         desc: "A teenage courier decodes a forbidden signal echoing through the underground zones.",
         by: "Jae Lin — June 12, 2025"
       },
       {
-        img: "Test Cover 3.png",
+        img: "https://via.placeholder.com/400x250/0df6e3/0f0f1c?text=Soft+Reboot",
         title: "Soft Reboot",
         desc: "An old hacker returns to the mesh to settle a debt—only to find himself rewritten.",
         by: "Amir Soto — May 30, 2025"
       },
       {
-        img: "Test Cover 4.png",
+        img: "https://via.placeholder.com/400x250/0df6e3/0f0f1c?text=Glass+Path",
         title: "Glass Path",
         desc: "In a mirrored city above the clouds, a girl searches for her twin lost in the grid.",
         by: "Aiko Tanaka — May 12, 2025"
