--- a/fiction.html
+++ b/fiction.html
@@ -174,7 +174,7 @@
     <div class="story-grid" id="storyGrid">
       <!-- Placeholder Stories -->
       <div class="story-card">
-        <img src="https://via.placeholder.com/400x250/0df6e3/0f0f1c?text=Story+One" alt="Story Art">
+        <img src="Placeholder Image 1" alt="Story Art">
         <h3>The Parallax Scar</h3>
         <p>A memory broker wakes to find one of his own memories missing—and selling fast.</p>
         <small>By Cal Venn — July 2025</small>
