--- a/fiction.html
+++ b/fiction.html
@@ -180,13 +180,13 @@
         <small>By Cal Venn — July 2025</small>
       </div>
       <div class="story-card">
-        <img src="https://via.placeholder.com/400x250/0df6e3/0f0f1c?text=Story+Two" alt="Story Art">
+        <img src="Placeholder Image 3.png" alt="Story Art">
         <h3>Glass Static</h3>
         <p>What happens when the last analogue signal bleeds back into the mesh?</p>
         <small>By El Harker — July 2025</small>
       </div>
       <div class="story-card">
-        <img src="https://via.placeholder.com/400x250/0df6e3/0f0f1c?text=Story+Three" alt="Story Art">
+        <img src="hPlaceholder Image 6.png" alt="Story Art">
         <h3>Vanta Drip</h3>
         <p>Reality bends when a thief injects a prototype neural dye stolen from the spire labs.</p>
         <small>By Xue Ren — July 2025</small>
