--- a/fiction.html
+++ b/fiction.html
@@ -186,7 +186,7 @@
         <small>By El Harker — July 2025</small>
       </div>
       <div class="story-card">
-        <img src="hPlaceholder Image 6.png" alt="Story Art">
+        <img src="Placeholder Image 6.png" alt="Story Art">
         <h3>Vanta Drip</h3>
         <p>Reality bends when a thief injects a prototype neural dye stolen from the spire labs.</p>
         <small>By Xue Ren — July 2025</small>
