--- a/fiction.html
+++ b/fiction.html
@@ -200,7 +200,10 @@
   <footer>
     <div class="footer-container">
       <div class="footer-column">
-        <img src="Flame logo-1.png.png" alt="Burnline Logo" class="footer-logo">
+        <div style="display: flex; align-items: center; gap: 0.5rem; margin-bottom: 1rem;">
+          <img src="Flame logo-1.png.png" alt="Burnline Logo" class="footer-logo">
+          <span style="color: #0df6e3; font-family: 'Orbitron', sans-serif; font-size: 1.5rem;">Burnline</span>
+        </div>
         <p>Sign up to our newsletter to get the latest stories, art, and neon-lit news from Burnline.</p>
         <form>
           <input type="email" placeholder="Email Address" class="newsletter-input">
@@ -224,6 +227,7 @@
       &copy; 2025 Burnline Magazine — All rights reserved
     </div>
   </footer>
+
 
   <script>
     const moreStories = [
