--- a/fiction.html
+++ b/fiction.html
@@ -197,32 +197,35 @@
     </div>
   </section>
 
-  <footer>
+   <footer>
     <div class="footer-container">
+      <!-- Newsletter -->
       <div class="footer-column">
-        <div style="display: flex; align-items: center; gap: 0.5rem; margin-bottom: 1rem;">
-          <img src="Flame logo-1.png.png" alt="Burnline Logo" class="footer-logo">
-          <span style="color: #0df6e3; font-family: 'Orbitron', sans-serif; font-size: 1.5rem;">Burnline</span>
-        </div>
-        <p>Sign up to our newsletter to get the latest stories, art, and neon-lit news from Burnline.</p>
-        <form>
+        <img src="Flame logo-1.png.png" alt="Burnline Logo" class="footer-logo">
+        <p style="line-height: 1.6;">Sign up to our newsletter to get the latest stories, art, and neon-lit news from Burnline.</p>
+        <form style="margin-top: 1rem;">
           <input type="email" placeholder="Email Address" class="newsletter-input">
           <br>
           <button type="submit" class="newsletter-button">Subscribe</button>
         </form>
       </div>
+
+      <!-- Contact Info -->
       <div class="footer-column">
         <h4 style="color: #0df6e3;">Get In Touch</h4>
         <p>Burnline Magazine<br>PO Box 404<br>Neo SF, CA 94101</p>
         <p>contact@burnline.net<br><span style="font-size: 0.8rem;">(no story submissions by email)</span></p>
       </div>
+
+      <!-- Read -->
       <div class="footer-column">
         <h4 style="color: #0df6e3;">Read</h4>
-        <p><a href="#">Neon Dystopia</a></p>
-        <p><a href="#">Future//Tense</a></p>
-        <p><a href="#">HackDust</a></p>
+        <p><a href="#" style="color: #ccc; text-decoration: none;">Neon Dystopia</a></p>
+        <p><a href="#" style="color: #ccc; text-decoration: none;">Future//Tense</a></p>
+        <p><a href="#" style="color: #ccc; text-decoration: none;">HackDust</a></p>
       </div>
     </div>
+
     <div class="footer-bottom">
       &copy; 2025 Burnline Magazine — All rights reserved
     </div>
