--- a/index.html
+++ b/index.html
@@ -175,9 +175,7 @@
 
   <section class="hero">
     <div class="hero-text">
-      <h1>The Pulse of Cyberpunk</h1>
-      <p>Burnline is a digital magazine dedicated to showcasing boundary-pushing stories and visuals that reflect the fractured, luminous, and ever-evolving spirit of cyberpunk.</p>
-      <p style="color:#0df6e3; font-weight:bold;">Our Latest Issue</p>
+      <h1>The Latest Issue</h1>
       <p>This issue features stories from cutting-edge cyberpunk voices including Ava Mendez, Riku Takano, Lena Grey, and Omar Vega. You'll find tales of synthetic memory trafficking, chrome cults, and a fractured future haunted by luminous ghosts. Also in this issue: glitch art spreads by KX-07 and essays exploring techno-spirituality and the collapse of reality simulation systems.</p>
     </div>
     <img src="Test Cover 1.png" alt="Latest issue cover">
