--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     }
     main {
       padding: 2rem;
-      max-width: 1000px;
+      max-width: 800px;
       margin: 0 auto;
     }
     section {
@@ -58,71 +58,6 @@
     .btn-pink:hover {
       background-color: #d10078;
     }
-    .grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-      gap: 2rem;
-      margin-top: 2rem;
-    }
-    .card {
-      background-color: #1e223d;
-      padding: 1.5rem;
-      border-radius: 10px;
-      text-align: center;
-      box-shadow: 0 0 10px rgba(0, 255, 255, 0.1);
-    }
-    .card img {
-      width: 100%;
-      border-radius: 6px;
-      margin-bottom: 1rem;
-    }
-    .card h3 {
-      color: #0df6e3;
-      margin-bottom: 0.5rem;
-    }
-    footer {
-      background-color: #111320;
-      padding: 2rem;
-      color: #ccc;
-    }
-    .footer-container {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: space-between;
-      gap: 2rem;
-    }
-    .footer-column {
-      flex: 1 1 250px;
-    }
-    .footer-logo {
-      width: 120px;
-      margin-bottom: 1rem;
-    }
-    .newsletter-input {
-      width: 100%;
-      padding: 0.5rem;
-      border: none;
-      border-radius: 4px;
-      margin-bottom: 0.5rem;
-    }
-    .newsletter-button {
-      padding: 0.5rem 1rem;
-      background-color: #0df6e3;
-      border: none;
-      color: #0f0f1c;
-      font-weight: bold;
-      border-radius: 4px;
-      cursor: pointer;
-    }
-    .newsletter-button:hover {
-      background-color: #0acfc3;
-    }
-    .footer-bottom {
-      text-align: center;
-      margin-top: 2rem;
-      font-size: 0.85rem;
-      color: #888;
-    }
   </style>
 </head>
 <body>
@@ -135,27 +70,31 @@
         <p>This issue features stories from cutting-edge cyberpunk voices including Ava Mendez, Riku Takano, Lena Grey, and Omar Vega. You'll find tales of synthetic memory trafficking, chrome cults, and a fractured future haunted by luminous ghosts. Also in this issue: glitch art spreads by KX-07 and essays exploring techno-spirituality and the collapse of reality simulation systems.</p>
         <button class="btn-pink">Read this Issue</button>
       </div>
-      <img src="Test Cover 1.png" alt="Latest issue cover">
-    </section>
-
-    <section class="grid" id="features">
-      <div class="card">
-        <img src="AL Cover.png" alt="Featured Stories image">
-        <h3>Featured Stories</h3>
-        <p>Explore high-voltage fiction from the neon edge — a curated selection of our boldest, strangest, and most unforgettable tales.</p>
-      </div>
-      <div class="card">
-        <img src="NM Art.png" alt="Poll image">
-        <h3>Poll: Best Cyberpunk Media</h3>
-        <p>We asked readers to weigh in on the most iconic games, movies, books, and art that define the cyberpunk canon. Here’s what they said.</p>
-      </div>
-      <div class="card">
-        <img src="CS2 Keyart.jpg" alt="Stuff We Like image">
-        <h3>Stuff We Like</h3>
-        <p>From glitchwave aesthetics to narrative-heavy indies, we round up the weird, wired, and wonderful media on our radar.</p>
-      </div>
     </section>
   </main>
+</body>
+</html>
+
+    <img src="Test Cover 1.png" alt="Latest issue cover">
+  </section>
+
+  <section class="grid" id="features">
+    <div class="card">
+      <img src="AL Cover.png" alt="Featured Stories image">
+      <h3>Featured Stories</h3>
+      <p>Explore high-voltage fiction from the neon edge — a curated selection of our boldest, strangest, and most unforgettable tales.</p>
+    </div>
+    <div class="card">
+      <img src="NM Art.png" alt="Poll image">
+      <h3>Poll: Best Cyberpunk Media</h3>
+      <p>We asked readers to weigh in on the most iconic games, movies, books, and art that define the cyberpunk canon. Here’s what they said.</p>
+    </div>
+    <div class="card">
+      <img src="CS2 Keyart.jpg" alt="Stuff We Like image">
+      <h3>Stuff We Like</h3>
+      <p>From glitchwave aesthetics to narrative-heavy indies, we round up the weird, wired, and wonderful media on our radar.</p>
+    </div>
+  </section>
 
   <footer>
     <div class="footer-container">
