--- a/index.html
+++ b/index.html
@@ -167,9 +167,9 @@
 
   <nav>
     <a href="#features">Features</a>
-    <a href="#fiction">Fiction</a>
+    <a href="https://bowliopia.github.io/burnline/about.htm">Fiction</a>
     <a href="#art">Art</a>
-    <a href="#about">About</a>
+    <a href="https://bowliopia.github.io/burnline/about.html">About</a>
     <a href="#submit">Submit</a>
   </nav>
 
