--- a/index.html
+++ b/index.html
@@ -157,6 +157,23 @@
       font-weight: bold;
       cursor: pointer;
     }
+    .read-issue-btn {
+  background-color: #0df6e3;
+  border: none;
+  color: #0f0f1c;
+  padding: 0.75rem 2rem;
+  font-weight: bold;
+  font-size: 1rem;
+  border-radius: 4px;
+  cursor: pointer;
+  display: inline-block;
+  margin-top: 1rem;
+  transition: background-color 0.3s;
+}
+
+.read-issue-btn:hover {
+  background-color: #0ad3c6;
+}
   </style>
 </head>
 <body>
@@ -173,13 +190,14 @@
     <a href="#submit">Submit</a>
   </nav>
 
-  <section class="hero">
-    <div class="hero-text">
-      <h1>The Latest Issue</h1>
-      <p>This issue features stories from cutting-edge cyberpunk voices including Ava Mendez, Riku Takano, Lena Grey, and Omar Vega. You'll find tales of synthetic memory trafficking, chrome cults, and a fractured future haunted by luminous ghosts. Also in this issue: glitch art spreads by KX-07 and essays exploring techno-spirituality and the collapse of reality simulation systems.</p>
-    </div>
-    <img src="Test Cover 1.png" alt="Latest issue cover">
-  </section>
+<section class="hero">
+  <div class="hero-text">
+    <h1>The Latest Issue</h1>
+    <p>This issue features stories from cutting-edge cyberpunk voices including Ava Mendez, Riku Takano, Lena Grey, and Omar Vega. You'll find tales of synthetic memory trafficking, chrome cults, and a fractured future haunted by luminous ghosts. Also in this issue: glitch art spreads by KX-07 and essays exploring techno-spirituality and the collapse of reality simulation systems.</p>
+    <a href="fiction.html" class="read-issue-btn">Read this Issue</a>
+  </div>
+  <img src="Test Cover 1.png" alt="Latest issue cover">
+</section>
 
   <section class="grid" id="features">
     <div class="card">
