--- a/about.html
+++ b/about.html
@@ -130,10 +130,9 @@
 
   <section class="content">
     <h1>About Burnline</h1>
-    <p><strong>Burnline</strong> is a digital magazine that lives at the luminous edge of the fractured future.</p>
-    <p>We publish stories, art, and commentary that reflect the beauty, despair, and thrill of cyberpunk worlds—whether grimy and neon-lit, synthetic and spiritual, or hyperreal and collapsing in on themselves.</p>
-    <p>We're here for the creators. The dreamers. The ones writing code and poetry in the same breath. Our mission is to give voice to the untold stories of tomorrow and to elevate the creators pushing boundaries in genre fiction and visual expression.</p>
-    <p>If you’d like to submit, collaborate, or just say hi, head over to our <a href="submit.html" style="color:#0df6e3;">Submit</a> page or reach out at <em>contact@burnline.net</em>.</p>
+    <p><strong>Burnline</strong> is a digital magazine run by a small crew who's tried our best to make a hub for all things cyberpunk.</p>
+    <p>We publish stories, art, and commentary that reflects the weirdness of whatever the hell cyberpunk is supposed to be. Feel like the real world is folding in on itself? Us too. Let's make some art about it.</p>
+    <p>If you’d like to submit, collaborate, or just say hi, head over to our <a href="submit.html" style="color:#0df6e3;">Submit</a> page or reach out at <em>contact@burnline.net</em>. If there's anything we don't express on this site that you think belongs here, we'd love to hear about it.</p>
   </section>
 
   <footer>
