--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
 <section class="hero">
   <div class="hero-text">
     <h1>The Latest Issue</h1>
-    <p>This issue features stories from cutting-edge cyberpunk voices including Ava Mendez, Riku Takano, Lena Grey, and Omar Vega. You'll find tales of synthetic memory trafficking, chrome cults, and a fractured future haunted by luminous ghosts. Also in this issue: glitch art spreads by KX-07 and essays exploring techno-spirituality and the collapse of reality simulation systems.</p>
+    <p>This issue features stories from cutting-edge cyberpunk voices including [author], [author], [author], and [author]. You'll find tales of [theme], [theme], and [theam]. Also in this issue: art spreads by [artist], and [artist] and essays exploring [themes and other weird shit].</p>
     <a href="fiction.html" class="read-issue-btn">Read this Issue</a>
   </div>
   <img src="Test Cover 1.png" alt="Latest issue cover">
