--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
     <a href="https://bowliopia.github.io/burnline/fiction.html">Fiction</a>
     <a href="#art">Art</a>
     <a href="https://bowliopia.github.io/burnline/about.html">About</a>
-    <a href="#submit">Submit</a>
+    <a href="https://bowliopia.github.io/burnline/submit.html">Submit</a>
   </nav>
 
 <section class="hero">
