--- a/submit.html
+++ b/submit.html
@@ -74,7 +74,7 @@
 
   <header>
     <div class="logo-container">
-      <img src="flame-logo.png" alt="Burnline Flame Logo" />
+      <img src="Flame logo-1.png.png" alt="Burnline Flame Logo" />
       <h1>Burnline</h1>
     </div>
     <nav>
